--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ python = ">=3.6.1,<3.9"
 requests = "^2.25.1"
 boto3 = "^1.17.64"
 pyathena = "^2.2.0"
-singer-sdk = "^0.3.2"
+
+# Testing prerelease from: https://gitlab.com/meltano/sdk/-/merge_requests/137
+singer-sdk = "0.3.5.dev1524730327"
+# singer-sdk = "^0.3.5"
 # singer-sdk = {path = "../sdk", develop = true}
 
 [tool.poetry.dev-dependencies]
