--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ boto3 = "^1.17.64"
 pyathena = "^2.2.0"
 
 # Testing prerelease from: https://gitlab.com/meltano/sdk/-/merge_requests/137
-singer-sdk = "0.3.5.dev1524730327"
+singer-sdk = "0.3.5.dev1524829519"
 # singer-sdk = "^0.3.5"
 # singer-sdk = {path = "../sdk", develop = true}
 
@@ -20,6 +20,7 @@ singer-sdk = "0.3.5.dev1524730327"
 pytest = "^6.1.2"
 nose = "^1.3.7"
 python-dotenv = "^0.17.1"
+mypy = "^0.910"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
