--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,7 @@ requests = "^2.25.1"
 boto3 = "^1.17.64"
 pyathena = "^2.2.0"
 
-# Testing prerelease from: https://gitlab.com/meltano/sdk/-/merge_requests/137
-singer-sdk = "0.3.5.dev1524829519"
-# singer-sdk = "^0.3.5"
+singer-sdk = "0.3.9"
 # singer-sdk = {path = "../sdk", develop = true}
 
 [tool.poetry.dev-dependencies]
